Slight UI improvement. Fixed bug where it wouldn't calculate OS while increasing programs/hits. Fixed bug where host cards would be too small to display text properly. Fixed bug where restoring session with number over 30 wouldn't result in glitch effect immediately.

--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ input[type=text], [type=number] {
     border: 1px solid #dedede;
     border-radius: 5px;
     flex: auto;
-    min-width: 100px;
-    max-width: 300px;
+    min-width: 150px;
+    max-width: 100%;
     min-height: 100px;
     text-align: center;
 }
@@ -217,7 +217,7 @@ input[type=text], [type=number] {
 }
 
 .fullyVisible   {
-    filter: brightness(100%);
+    filter: brightness(80%);
 }
 
 .hoverNo:hover {
